--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trace-react-app",
+  "name": "trace-ai-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
+    "trace-ai-sdk": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
